# py-unii

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
test/: test_unii_auto_reconnect.py  test_unii_command_data_helpers.py  test_unii_connect_encrypted.py  test_unii_connect_unencrypted.py  test_unii_device_status.py  test_unii_equipment_information.py  test_unii_input_arrangement.py  test_unii_inputs.py  test_unii_message.py  test_unii_message_checksum.py  test_unii_message_encryption.py  test_unii_sections.py
tests/: __init__.py  settings.json  test_shared_key.py  test_unii_auto_reconnect.py  test_unii_command_data.py  test_unii_command_data_helpers.py  test_unii_connect_encrypted.py  test_unii_connect_unencrypted.py  test_unii_device_status.py  test_unii_equipment_information.py  test_unii_inputs.py  test_unii_message.py  test_unii_message_encryption.py  test_unii_outputs.py  test_unii_sections.py
unii/: __init__.py  __main__.py  sia_code.py  unii.py  unii_command.py  unii_command_data.py  unii_connection.py  unii_message.py
