[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unii"
version = "0.0.0.1"
license = {text = "Apache-2.0"}
authors = [
    { name="Rogier van Staveren" }
]
description = "Library to interface with Alphatronics UNii security systems."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
	"pycryptodome>=3.6.6",
	"semver>=3.0.2"
]

[project.urls]
"Homepage" = "https://github.com/unii-security/py-unii"
"Bug Tracker" = "https://github.com/unii-security/py-unii/issues"

[tool.black]
target-version = ["py39", "py310"]
exclude = 'generated'

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"

